# hello-world-python

./: .gitignore  Makefile  README.md  app.py  buildspec.yml  insecure_report.json  pyproject.toml  requirements.txt
.github/workflows/: code-scanning.yml  github-actions-test.yml
lambda/: Makefile
lambda/_layer_boto/: pyproject.toml
lambda/_layer_boto/shared/: utils.py
lambda/_shared/: Makefile  poetry-install.sh
lambda/cloudwatch-logs-processor/: index.js  package-lock.json  package.json
lambda/cloudwatch-metrics-processor/: function.py  pyproject.toml
lambda/hello_world/: _disabled_tests_function.py  function.py  pyproject.toml
lambda/slack-notify/: function.py  function_tests.py  pyproject.toml
scripts/: safety-scan.sh  setup-sonar.sh  test.sh
terraform/: codebuild.tf  main.tf  pipeline.tfold  provider.tf  vm.tf
