[tool.poetry]
name = "cloudwatch-metrics-processor"
version = "0.1.0"
description = ""
authors = ["NHS Digital"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
opentelemetry-proto = "^1.1.0"
protobuf = "^3.15.8"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
bandit = "^1.7.0"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
