[tool.poetry]
name = "hello_world"
version = "0.1.0"
description = ""
authors = ["NHS Digital"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
django = "1.2"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
