[tool.poetry]
name = "slack-notify"
version = "0.1.0"
description = ""
authors = ["NHS Digital"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
bandit = "^1.7.0"
safety = "^1.10.3"
boto3 = "^1.20.8"
mypy = "^0.910"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
